// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` build does platform things) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--platform=linux/arm64",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[` build multiplatform (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--platform=linux/amd64",
      "--platform=linux/arm64",
      "--cache-from=renovate/docker-build-cache:base-latest",
      ".",
    ],
  ],
]
`;

exports[` build multiplatform 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--push",
      "--platform=linux/amd64",
      "--platform=linux/arm64",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-to=type=registry,ref=renovate/docker-build-cache:base-latest,mode=max",
      ".",
    ],
  ],
]
`;

exports[` build retries 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[` build throws 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[` build uses cache (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--build-arg=IMAGE=slim",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[` build uses cache 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-to=type=registry,ref=renovate/docker-build-cache:base-latest,mode=max",
      ".",
    ],
  ],
]
`;

exports[` build works 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[` publish uptodate 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[` publish works (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[` publish works 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
  Array [
    "docker",
    Array [
      "push",
      "renovate/base:latest",
    ],
  ],
]
`;
